[AAPI-416] Sid grant type
