# src/Opdex.Auth.Api/Encryption/StratisIdValidator.cs
@@ -35,21 +35,34 @@ public class StratisIdValidator
         if (!verified) return Result.Fail(new CannotVerifySignatureError());
     
         string connectionId;
-        long exp;
+        long actualExp;
     
         try
         {
-            var uid = _twoWayEncryptionProvider.Decrypt(Base64Extensions.UrlSafeBase64Decode(expectedId.Uid));
+            var actualUid = _twoWayEncryptionProvider.Decrypt(Base64Extensions.UrlSafeBase64Decode(expectedId.Uid));
             const int unixTimestampLength = 10;
-            connectionId = uid[..^unixTimestampLength];
-            exp = long.Parse(uid[^unixTimestampLength..]);
+            connectionId = actualUid[..^unixTimestampLength];
+            actualExp = long.Parse(actualUid[^unixTimestampLength..]);
         }
         catch (Exception)
         {
             return Result.Fail(new InvalidUidError());
         }
     
-        return exp != query.Exp ? Result.Fail(new DifferentExpError()) : Result.Ok(connectionId);
+        return actualExp != query.Exp ? Result.Fail(new DifferentExpError()) : Result.Ok(connectionId);
+    }
+
+    public async Task<Result<string>> RetrieveConnectionId(string callbackUri, string uid, DateTimeOffset exp, string publicKey,
+                                                           string signature, CancellationToken cancellationToken = default)
+    {
+        Guard.Against.NullOrEmpty(callbackUri, nameof(callbackUri));
+        Guard.Against.NullOrEmpty(uid, nameof(uid));
+        Guard.Against.NullOrEmpty(publicKey, nameof(publicKey));
+        Guard.Against.NullOrEmpty(signature, nameof(signature));
+
+        var query = new StratisSignatureAuthCallbackQuery { Uid = uid, Exp = exp.ToUnixTimeSeconds() };
+        var body = new StratisSignatureAuthCallbackBody { PublicKey = publicKey, Signature = signature };
+        return await RetrieveConnectionId(callbackUri, query, body, cancellationToken);
     }
 
     private class CannotVerifySignatureError : Error
