# src/Opdex.Auth.Api/Models/TokenRequestBody.cs
@@ -1,4 +1,5 @@
 using System;
+using SSAS.NET;
 
 namespace Opdex.Auth.Api.Models;
 
@@ -6,9 +7,15 @@ public class TokenRequestBody
 {
     public GrantType GrantType { get; set; }
     
-    public string? RefreshToken { get; set; }
-    
     public Guid? Code { get; set; }
 
     public string? CodeVerifier { get; set; }
+
+    public StratisId? Sid { get; set; }
+
+    public string? PublicKey { get; set; }
+    
+    public string? Signature { get; set; }
+    
+    public string? RefreshToken { get; set; }
 }
